set(TARGET_NAME ${PROJECT_NAME})
add_executable(${TARGET_NAME} main.cpp backtrace.cpp backtrace.h)
target_include_directories(${TARGET_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
if(${WIN32})
	target_link_libraries(${TARGET_NAME} PRIVATE dbghelp.lib)
endif()
if(${UNIX})
	target_link_options(${TARGET_NAME} PRIVATE -rdynamic)
endif()